[project]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Elina Mazitova",email = "elinamazitova14@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "selene==2.0.0rc2",
    "pytest>=9.0.2,<10.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 >=7.3.0,<8.0.0",
    "pylint >=4.0.4,<5.0.0"
]
